--- a/timeweb/timewebapp/static/css/template.css
+++ b/timeweb/timewebapp/static/css/template.css
@@ -1,7 +1,6 @@
 /* THIS FILE HAS NOT YET BEEN FULLY DOCUMENTED */
 * {
     font-family: "Open Sans", sans-serif;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 input, textarea {
     -webkit-user-select: text;
